8.0.2/users_guide/flags-misc.gen.rst
.. This file is generated by utils/mkUserGuidePart

+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| Flag                                               | Description                                                                                          | Static/Dynamic                 | Reverse                                            |
+====================================================+======================================================================================================+================================+====================================================+
| :ghc-flag:`-jN`                                    | When compiling with :ghc-flag:`--make`, compile ⟨N⟩ modules in parallel.                             | dynamic                        |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-fno-hi-version-check`                  | Don't complain about ``.hi`` file mismatches                                                         | dynamic                        |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-fhistory-size`                         | Set simplification history size                                                                      | dynamic                        |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-fno-ghci-history`                      | Do not use the load/store the GHCi command history from/to ``ghci_history``.                         | dynamic                        |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-fno-ghci-sandbox`                      | Turn off the GHCi sandbox. Means computations are run in the main thread, rather than a forked       | dynamic                        |                                                    |
|                                                    | thread.                                                                                              |                                |                                                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+
| :ghc-flag:`-freverse-errors`                       | Display errors in GHC/GHCi sorted by reverse order of source code line numbers.                      | dynamic                        | :ghc-flag:`-fno-reverse-errors`                    |
+----------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+----------------------------------------------------+

