8.2.2/users_guide/flags-misc.gen.rst
.. This file is generated by utils/mkUserGuidePart

+--------------------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+---------------------------------------------------------+
| Flag                                                         | Description                                                                                          | Type                           | Reverse                                                 |
+==============================================================+======================================================================================================+================================+=========================================================+
| :ghc-flag:`-j[⟨n⟩]`                                          | When compiling with :ghc-flag:`--make`, compile ⟨n⟩ modules in parallel.                             | dynamic                        |                                                         |
+--------------------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+---------------------------------------------------------+
| :ghc-flag:`-fno-hi-version-check`                            | Don't complain about ``.hi`` file mismatches                                                         | dynamic                        |                                                         |
+--------------------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+---------------------------------------------------------+
| :ghc-flag:`-fhistory-size`                                   | Set simplification history size                                                                      | dynamic                        |                                                         |
+--------------------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+---------------------------------------------------------+
| :ghc-flag:`-fno-ghci-history`                                | Do not use the load/store the GHCi command history from/to ``ghci_history``.                         | dynamic                        |                                                         |
+--------------------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+---------------------------------------------------------+
| :ghc-flag:`-fno-ghci-sandbox`                                | Turn off the GHCi sandbox. Means computations are run in the main thread, rather than a forked       | dynamic                        |                                                         |
|                                                              | thread.                                                                                              |                                |                                                         |
+--------------------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+---------------------------------------------------------+
| :ghc-flag:`-flocal-ghci-history`                             | Use current directory for the GHCi command history file ``.ghci-history``.                           | dynamic                        | :ghc-flag:`-fno-local-ghci-history`                     |
+--------------------------------------------------------------+------------------------------------------------------------------------------------------------------+--------------------------------+---------------------------------------------------------+

